--- a/TrabalhoPraticoII/pom.xml
+++ b/TrabalhoPraticoII/pom.xml
@@ -19,5 +19,10 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
 </project>
